--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -2,6 +2,7 @@ $body: #eaeaea;
 
 $mainColor: #2f304b;
 $mainColor2: #161720;
+$mainColor3: #535485;
 
 $secondaryColor: #ff4d4d;
 $secondaryColor2: #ff4f4f;
