--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -30,7 +30,7 @@ $width: 33.3%;
         width: $width;
         overflow: hidden;
         transition: all 0.5s;
-     
+
         &:hover {
           cursor: pointer;
           img {
@@ -38,6 +38,75 @@ $width: 33.3%;
         }
         
         .article-content {
+          position: relative;
+
+          
+          .over-article-container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: $secondaryColor;
+            opacity: 0;
+            transition: 0.05s all ease-out;
+            
+            &:hover {
+              opacity: .98 !important;
+            }
+
+            .over-article-wrapper {
+              position: relative;
+              height: 50%;
+              min-height: 120px;
+              top: 50%;
+              transform: translateY(-50%);
+              padding: 20px 40px;
+              text-align: left;
+              margin-top: -10px;
+              
+              .over-article-top {
+                max-height: 70px;
+                overflow: hidden;
+                .over-article-keywords {
+                  .over-article-keyword {
+                    -webkit-font-smoothing: antialiased !important;
+                    font-family: 'saxi';
+                    text-transform: capitalize;
+                    color: rgba($mainColor2, 0.8);
+                    line-height: 1.3em;
+                    font-size: 1.2rem;        
+                    
+                    .over-article-word {
+                      color: $thirdColor2;
+                      transition: .1s all ease-out;
+
+                        &:hover {
+                          color: $mainColor2;
+                        }
+                    }
+                  }
+                }
+              }
+
+              .over-article-bottom {
+                border-top: 1px solid rgba($mainColor2, 0.8);
+                margin-top: 10px;
+                width: 100%;
+                height: 220px;
+                color: $mainColor2;
+
+                .over-article-content {
+                  margin-top: 10px;
+                  font-family: 'Josefin Sans';
+                  font-weight: 300;
+                  font-size: 1.1em;
+                  line-height: 1.3em;
+                  height: 30%;
+                  overflow: hidden;
+
+                }
+              }
+            }
+          }
 
           img {
             min-height: 200px;
