--- a/public/css/main.css
+++ b/public/css/main.css
@@ -353,14 +353,16 @@ svg:focus {
                 color: rgba(22, 23, 32, 0.8);
                 line-height: 1.3em;
                 font-size: 1.2rem; }
+                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-keywords .over-article-keyword:hover {
+                  color: #161720;
+                  text-decoration: line-through; }
                 #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-keywords .over-article-keyword .over-article-word {
-                  color: #aefff8;
+                  color: white;
                   transition: .1s all ease-out; }
-                  #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-keywords .over-article-keyword .over-article-word:hover {
-                    color: #161720; }
+                  #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-keywords .over-article-keyword .over-article-word:before {
+                    content: '#'; }
             #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom {
-              border-top: 1px solid rgba(22, 23, 32, 0.8);
-              margin-top: 10px;
+              margin-top: 30px;
               width: 100%;
               height: 220px;
               color: #161720; }
