--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -73,23 +73,27 @@ $width: 33.3%;
                     text-transform: capitalize;
                     color: rgba($mainColor2, 0.8);
                     line-height: 1.3em;
-                    font-size: 1.2rem;        
+                    font-size: 1.2rem;       
+                    
+                    &:hover {
+                      color: $mainColor2;
+                      text-decoration: line-through;
+                    }
                     
                     .over-article-word {
-                      color: $thirdColor2;
+                      color: white;
                       transition: .1s all ease-out;
 
-                        &:hover {
-                          color: $mainColor2;
-                        }
+                      &:before {
+                        content: '#';
+                      }
                     }
                   }
                 }
               }
 
               .over-article-bottom {
-                border-top: 1px solid rgba($mainColor2, 0.8);
-                margin-top: 10px;
+                margin-top: 30px;
                 width: 100%;
                 height: 220px;
                 color: $mainColor2;
