--- a/public/css/main.css
+++ b/public/css/main.css
@@ -330,10 +330,10 @@ svg:focus {
         width: 100%; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-label {
         text-align: left;
-        font-family: 'rame';
+        font-family: 'sax';
         color: #2f304b;
         line-height: 1.68rem;
-        font-size: 1.25rem;
+        font-size: 1.2rem;
         margin-top: -6px;
         font-weight: 300;
         padding: 24px;
@@ -501,8 +501,8 @@ svg:focus {
   height: 100% !important; }
 
 body {
-  background-image: linear-gradient(180deg, #f3f3f6 40%, #ebebeb 40%, #ebebeb 43.33%, #f1f1f1 43.33%, #f1f1f1 50%, #f3f3f6 50%, #f3f3f6 90%, #ebebeb 90%, #ebebeb 93.33%, #f1f1f1 93.33%, #f1f1f1 100%);
-  background-size: 30.00px 30.00px;
+  background-image: linear-gradient(0deg, #f3f3f6 38.46%, #f5f5f5 38.46%, #f5f5f5 46.15%, #f0f0f2 46.15%, #f0f0f2 50%, #f3f3f6 50%, #f3f3f6 88.46%, #f5f5f5 88.46%, #f5f5f5 96.15%, #f0f0f2 96.15%, #f0f0f2 100%);
+  background-size: 26.00px 26.00px;
   background-attachment: fixed; }
 
 body {
