--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -1,15 +1,15 @@
 $body: #eaeaea;
 
-$mainColor: #2f304b;
-$mainColor2: #161720;
-$mainColor3: #535485;
+$mainColor3: #9e9e9e;
+$mainColor: #666666;
+$mainColor2: #353436;
 
 $secondaryColor: #ff4d4d;
 $secondaryColor2: #ff4f4f;
 
-$thirdColor: #b9dcd9;
+$thirdColor: #6bfee6;
 $thirdColor2: #aefff8;
-$thirdColor3: #f3f3f3;
+$thirdColor3: #bbfff4;
 
-
+ 
 $myWhite: #f3f3f6;
