--- a/src/sass/libs/_articleOpen.scss
+++ b/src/sass/libs/_articleOpen.scss
@@ -3,7 +3,7 @@
   width: 0;
   height: 0;
   z-index: 11;
-  background-color: $thirdColor3;
+  background-color: whitesmoke;
   overflow-y: auto;
   
   .article-content-wrapper {
@@ -43,17 +43,17 @@
     
     .article-content-info {
       margin: 0 auto;
-      color: $mainColor;
+      color: $mainColor2;
       width: 80%;
       min-width: 340px;
       
       .article-content-title {
-        font-size: calc(64px + 4 * (100vw - 320px) / 1180);
-        line-height: 5rem;
-        font-family: 'saxi';
+        font-size: calc(78px + 4 * (100vw - 320px) / 1180);
+        line-height: 5.8rem;
+        font-family: 'work100';
         margin-bottom: 1.2em;
         text-align: left;
-        font-weight: 600;
+        font-weight: 300;
       }
 
       .article-content-readable {
@@ -62,9 +62,9 @@
         margin: 0 auto;
         
         p {
-          font-family: 'sax';
-          line-height: 1.6em;
-          font-size: calc(16px + 4 * (100vw - 320px) / 1180);
+          font-family: 'plaBook';
+          line-height: 1.55em;
+          font-size: calc(14px + 4 * (100vw - 320px) / 1180);
           width: 50%;
           min-width: 290px;
           margin: 30px;
