--- a/src/sass/libs/_loader.scss
+++ b/src/sass/libs/_loader.scss
@@ -15,7 +15,7 @@
     margin-left: -1500px;
     margin-top: -1500px;
     position: absolute;
-    background-color: $mainColor2;
+    background-color: $mainColor;
   }
   
   .loader-wrapper {
