--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,9 +15,8 @@
 @import "libs/articleOpen";
 
 %back1 {
-  background-image: linear-gradient(180deg, #f8f8f8 40%, #f3f3f3 40%, #f3f3f3 43.33%, #f6f6f6 43.33%, #f6f6f6 46.67%, #f0fffc 46.67%, #f0fffc 50%, #f8f8f8 50%, #f8f8f8 90%, #f3f3f3 90%, #f3f3f3 93.33%, #f6f6f6 93.33%, #f6f6f6 96.67%, #f0fffc 96.67%, #f0fffc 100%);
-  background-size: 30.00px 30.00px;
-  background-attachment: fixed;
+  background: #f4fffb;
+  background: url('/img/noise.png'), rgba(#e6e6e6, 0.97);
 }
 
 body {
@@ -25,7 +24,6 @@ body {
   font-weight: 400;
   color: rgb(9, 9, 17);
   overflow-x: hidden;
-  @extend %back1;
 }
 
 a {
@@ -40,6 +38,7 @@ a {
 }
 
 #app {
+  @extend %back1;
   position: absolute;
   -webkit-transition: all .25s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
   -moz-transition: all .25s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
